fixed some spacing issues:

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -38,3 +38,7 @@ height: 1rem;
 .usernameForm *{
     margin-right: 1rem;
 }
+.usernameForm{
+    margin-bottom: 1rem;
+    justify-content: center
+}
